src/test/ui/parser/raw-str-unterminated.stderr
error: unterminated raw string
  --> $DIR/raw-str-unterminated.rs:2:5
   |
LL |     r#" string literal goes on
   |     ^ unterminated raw string
   |
   = note: this raw string should be terminated with `"#`

error: aborting due to previous error

